--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
   <meta charset="utf-8">
   <title>Alex T Leach</title>
 
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css">
 </head>
 <body>
   <nav class="top-nav">
-    <ul class="foo-bar">
-      <li class="foo-bar__item foo-bar__item--brand">My Portfolio</li>
-      <li class="foo-bar__item">About</li>
-      <li class="foo-bar__item"> Day One</li>
-      <li class="foo-bar__item">Cool Stuff</li>
+    <ul class="nav-list">
+      <li class="nav-list__item nav-list__item--brand">My Portfolio</li>
+      <li class="nav-list__item">About</li>
+      <li class="nav-list__item"> Day One</li>
+      <li class="nav-list__item">Cool Stuff</li>
     </ul>
   </nav>
-  <header class="l">
-    <div class="l__container">
-      <h2 class="l__title">This is my portfolio!</h2>
+  <header class="hero">
+    <div class="hero__container">
+      <h2 class="hero__title">This is my portfolio!</h2>
       <hr class="y y--y">
-      <p class="l__text">There may be many like it, so I should replace this text to show that I am reading.</p>
+      <p class="hero__text">There may be many like it, so I should replace this text to show that I am reading.</p>
     </div>
   </header>
   <section class="x-x">
