--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
   <header class="hero">
     <div class="hero__container">
       <h2 class="hero__title">This is my portfolio!</h2>
-      <hr class="y y--y">
+      <hr class="divider--hero">
       <p class="hero__text">There may be many like it, so I should replace this text to show that I am reading.</p>
     </div>
   </header>
-  <section class="x-x">
-    <div class="z-x">
-      <h3 class="z-x">I'm a student at the Iron Yard</h3>
-      <hr class="y"
+  <section class="bg-pop">
+    <div class="bg-pop">
+      <h3 class="section-header">I'm a student at the Iron Yard</h3>
+      <hr class="divider">
       <p>I should write something about myself here and make it crafty.</p>
     </div>
   </section>
-  <section class="x-x">
-    <div class="z-x">
-      <h3 class="z-x">My First Day</h3>
-      <hr class="y">
+  <section class="bg-standard">
+    <div class="bg-standard">
+      <h3 class="section-header">My First Day</h3>
+      <hr class="divider">
       <p>Day one is hard. It should be tough and challenging. I'll write something about it here. Two paragraphs would be nice.</p>
     </div>
   </section>
-  <section id="x-photo">
+  <section id="bg-photo">
     <div class="z-x">
       <h2 class="p-title">What's my tagline?</h2>
     </div>
