fixed tagline div

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
     </div>
   </section>
   <section id="bg-photo">
-    <div class="z-x">
-      <h2 class="p-title">What's my tagline?</h2>
+    <div class="section-container">
+      <h2 class="photo-title">What's my tagline?</h2>
     </div>
   </section>
-  <section class="x-standard">
+  <section class="bg-standard">
     <div class="z-x">
       <div class="x">
         <figure class="x__x">
