fixed tagline and working on facts at the bottom

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css">
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <nav class="top-nav">
@@ -42,18 +43,18 @@
       <h2 class="photo-title">What's my tagline?</h2>
     </div>
   </section>
-  <section class="bg-standard">
-    <div class="z-x">
-      <div class="x">
-        <figure class="x__x">
+  <section class="bg-photo">
+    <div class="row__column">
+      <div class="row">
+        <figure class="row__column">
           <span class="fa fa-3x fa-clone"></span>
           <figcaption>This is a cool fact about me.</figcaption>
         </figure>
-        <figure class="x__x">
+        <figure class="row__column">
           <span class="fa fa-3x fa-clone"></span>
           <figcaption>This is another cool fact about me.</figcaption>
         </figure>
-        <figure class="x__x">
+        <figure class="row__column">
           <span class="fa fa-3x fa-clone"></span>
           <figcaption>This is another cool fact about me.</figcaption>
         </figure>
