forgot to save the aforementioned changes

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <h2 class="photo-title">What's my tagline?</h2>
     </div>
   </section>
-  <section class="bg-photo">
+  <section class="bg-standard">
     <div class="row__column">
       <div class="row">
         <figure class="row__column">
