I think I fixed all the design related problems

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
   </section>
   <section class="bg-standard">
-    <div class="row__column">
+    <div class="bg-standard">
       <div class="row">
         <figure class="row__column">
           <span class="fa fa-3x fa-clone"></span>
