finished the assignment for day 1

--- a/index.html
+++ b/index.html
@@ -19,28 +19,29 @@
   </nav>
   <header class="hero">
     <div class="hero__container">
-      <h2 class="hero__title">This is my portfolio!</h2>
+      <h2 class="hero__title">Alex T Leach</h2>
       <hr class="divider--hero">
-      <p class="hero__text">There may be many like it, so I should replace this text to show that I am reading.</p>
+      <p class="hero__text">Front-end coding portfolio</p>
     </div>
   </header>
   <section class="bg-pop">
     <div class="bg-pop">
       <h3 class="section-header">I'm a student at the Iron Yard</h3>
       <hr class="divider">
-      <p>I should write something about myself here and make it crafty.</p>
+      <p>This is where I will be showcasing some of my work from this course.</p>
     </div>
   </section>
   <section class="bg-standard">
     <div class="bg-standard">
       <h3 class="section-header">My First Day</h3>
       <hr class="divider">
-      <p>Day one is hard. It should be tough and challenging. I'll write something about it here. Two paragraphs would be nice.</p>
+      <p>Day one wasn't easy. It's a lot of new information to take in at once.</p>
+      <p>It can feel overwhelming but after the initial frustration and growing pains I feel a great sense of accomplishment.</p>
     </div>
   </section>
   <section id="bg-photo">
     <div class="section-container">
-      <h2 class="photo-title">What's my tagline?</h2>
+      <h2 class="photo-title">Here are the facts about Alex</h2>
     </div>
   </section>
   <section class="bg-standard">
@@ -48,15 +49,15 @@
       <div class="row">
         <figure class="row__column">
           <span class="fa fa-3x fa-clone"></span>
-          <figcaption>This is a cool fact about me.</figcaption>
+          <figcaption>Likes synthesizers</figcaption>
         </figure>
         <figure class="row__column">
           <span class="fa fa-3x fa-clone"></span>
-          <figcaption>This is another cool fact about me.</figcaption>
+          <figcaption>95% made of hummus</figcaption>
         </figure>
         <figure class="row__column">
           <span class="fa fa-3x fa-clone"></span>
-          <figcaption>This is another cool fact about me.</figcaption>
+          <figcaption>a 100% perfect boy</figcaption>
         </figure>
       </div>
     </div>
